Refactor: ES6 Update!
I have converted all of the require() modules into the standard ES6
import export syntax. Please view the different commands for an updated
way to write commands and events.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 # Edit this file if you know what you are doing!
 node_modules
 .env
+
+# Remove the line below if you would like the database to stay in the git repository (Not Recommended)
+pb_data
