--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discordjs-v14-template",
   "version": "1.0.0",
   "description": "A DiscordJS Template with Slash Command Support, Legacy Commands and More.",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -13,6 +13,7 @@
     "discord-api-types": "^0.37.15",
     "discord.js": "^14.6.0",
     "dotenv": "^14.3.2",
-    "glob": "^8.0.3"
+    "glob": "^8.0.3",
+    "pocketbase": "^0.8.3"
   }
 }
