--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^5.2.0",
     "discord-api-types": "^0.37.15",
     "discord.js": "^14.6.0",
     "dotenv": "^14.3.2",
