--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "discord-api-types": "^0.37.15",
     "discord.js": "^14.6.0",
     "dotenv": "^14.3.2",
-    "glob": "^8.0.3",
-    "pocketbase": "^0.8.3"
+    "glob": "^8.0.3"
   }
 }
